Fix validate message of mood form not showing

--- a/src/styles/MoodCreateForm.module.css
+++ b/src/styles/MoodCreateForm.module.css
@@ -1,4 +1,3 @@
 .textBox {
   width: 50%;
-  margin-bottom: 4px;
 }
